# insurance-telematics

./: .coverage  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_benchmark_databricks.py  run_new_tests_databricks.py
.github/workflows/: docs.yml
benchmarks/: README.md  run_benchmark.py
docs/api/: index.html  insurance_telematics.html  search.js
notebooks/: benchmark_telematics.py  databricks_validation.py  quickstart.ipynb  quickstart.py  run_new_tests_april2026.py  telematics_demo.py  test_zip_near_miss_databricks.py
src/insurance_telematics/: __init__.py  feature_extractor.py  hmm_model.py  preprocessor.py  risk_aggregator.py  scoring_pipeline.py  trip_loader.py  trip_simulator.py  zip_near_miss.py
tests/: conftest.py  test_cthmm_regression.py  test_edge_cases.py  test_expanded_coverage_april2026.py  test_feature_extractor.py  test_gaps.py  test_hmm_model.py  test_integration.py  test_new_coverage.py  test_new_coverage_20250403.py  test_preprocessor.py  test_risk_aggregator.py  test_scoring_pipeline.py  test_trip_loader.py  test_trip_simulator.py  test_zip_near_miss.py
