[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-telematics"
version = "0.1.1"
description = "HMM-based driving state classification and GLM-compatible risk scoring from raw telematics trip data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "telematics",
    "HMM",
    "actuarial",
    "UBI",
    "motor insurance",
    "driving behaviour",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "polars>=1.0",
    "pyarrow>=12.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "hmmlearn>=0.3",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-telematics"
Repository = "https://github.com/burning-cost/insurance-telematics"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_telematics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning",
]
