[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-telematics"
version = "0.1.8"
description = "Telematics-based insurance pricing: HMM driving state classification and GLM-compatible risk scoring from raw trip data for usage-based insurance (UBI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "telematics",
    "HMM",
    "actuarial",
    "UBI",
    "motor insurance",
    "driving behaviour",
    "pricing",
    "usage-based insurance",
    "risk scoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=1.0",
    "pyarrow>=14.0",
    "numpy>=2.0",
    "scipy>=1.10",
    "hmmlearn>=0.3.3",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://burning-cost.github.io/"
Repository = "https://github.com/burning-cost/insurance-telematics"
Changelog = "https://github.com/burning-cost/insurance-telematics/releases"
Documentation = "https://burning-cost.github.io/insurance-telematics"
"Bug Tracker" = "https://github.com/burning-cost/insurance-telematics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_telematics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning",
]
