[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-telematics"
version = "0.2.1"
description = "Telematics insurance pricing: HMM driving state classification and GLM risk scoring from raw trip data for usage-based insurance (UBI) and pay-how-you-drive (PHYD) products."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = [
    "insurance",
    "telematics",
    "usage-based insurance",
    "UBI",
    "pay how you drive",
    "PHYD",
    "pay as you drive",
    "PAYD",
    "pay per mile",
    "motor insurance",
    "motor pricing",
    "driving behaviour",
    "driving score",
    "risk scoring",
    "hidden markov model",
    "HMM",
    "GLM",
    "actuarial",
    "pricing",
    "UK",
    "personal lines",
    "black box insurance",
    "connected car",
    "trip data",
    "acceleration",
    "harsh braking",
    "speeding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=1.0",
    "pyarrow>=14.0",
    "numpy>=2.0",
    "scipy>=1.10",
    "hmmlearn>=0.3.3",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://burning-cost.github.io/libraries/insurance-telematics/"
Documentation = "https://burning-cost.github.io/libraries/insurance-telematics/"
Repository = "https://github.com/burning-cost/insurance-telematics"
"Bug Tracker" = "https://github.com/burning-cost/insurance-telematics/issues"
Changelog = "https://github.com/burning-cost/insurance-telematics/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_telematics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning",
]
